# research_pro_repo

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  rag_draft.ipynb
Audiofiles_MockupFeedback/: 1 Blutentnahme unspezifisch.m4a  2 Blutentnahme abwertend.m4a  Anamnese Feedback 1.m4a  Anamnese Feedback 2.m4a  Blutentnahme spezifisch.m4a  EKG 2.m4a  EKG Feedback 1 (1).m4a  Kittel-Handschuhe konstruktiv.m4a  Körperlich Untersuchung so semi.m4a  Körperlich Untersuchung unsinnig.m4a  Körperliche Untersuchung konstruktiv.m4a  Medikament aufziehen Feedback 1 - Kopie.m4a  Medikament aufziehen Feedback 2 - Kopie.m4a
OSCE_ExaminerTeaching-main/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
OSCE_ExaminerTeaching-main/app/: layout.tsx
OSCE_ExaminerTeaching-main/components/: AppShell.tsx  AudioRecorder.tsx  CertificateModal.tsx  EvaluationPanel.tsx  FeedbackFocus.tsx  FeedbackPanel.tsx  InfoPanel.tsx  VideoSidebar.tsx
OSCE_ExaminerTeaching-main/lib/: auth.ts  localStore.ts  openai.ts  session.ts
OSCE_ExaminerTeaching-main/modeltest/: test_stt.py
backend/data/: rag_eval_benchmark.json
backend/scripts/: compare_rag_variants.py  debug_chunks.py  evaluate_sample.py  ingest_documents.py  judge_rag_outputs.py  reset_vector_store.py
docs/: architecture.md  data_privacy.md  fpq_instrument.md
docs/paper/: main.aux  main.fls  (+5 more)
frontend/: .env.local.example  .gitignore  Makefile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
knowledge_base/: registry.json
(+73 files in other folders)
